@@ -1,3 +1,7 @@
+2017-11-03  Richard Sandiford  <richard.sandiford@linaro.org>
+
+	* gcc.dg/pr82809.c: New test.
+
 2017-11-02  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/81957
